fixed double scroll bar

--- a/src/apps/content-editor/src/app/ContentEditor.less
+++ b/src/apps/content-editor/src/app/ContentEditor.less
@@ -28,6 +28,9 @@
       padding: 13px;
       text-transform: capitalize;
       font-size: 16px;
+      svg {
+        margin-right: 8px;
+      }
     }
 
     // Display all Content Nav
