--- a/src/apps/content-editor/src/app/components/Nav/ContentNav.less
+++ b/src/apps/content-editor/src/app/components/Nav/ContentNav.less
@@ -22,7 +22,9 @@
 }
 
 .NavWrap {
-  height: calc(100vh - 54px - 40px); // 100 - GlobalTopbar - Collapse Btn
+  height: calc(
+    100vh - 54px - 40px - 104px
+  ); // 100 - GlobalTopbar - Collapse Btn
   margin: 0;
   overflow-y: auto;
   background: transparent;
